<resources>    <string name="app_name">CIPHER</string>    <string name="cipher_text">文字</string>    <string name="cipher_gesture">手勢</string>    <string name="cipher_link">連綫</string>    <string name="cipher_scan">掃描</string>    <string name="cipher_multi">混合</string>    <string name="cipher_setting">設定</string>    <string name="info">資訊</string>    <string name="cipher_doublepassword">雙重密碼驗證</string>    <string name="data_input_empty">没有任何輸入</string>    <string name="digit">位</string>    <string name="copyed">已複製</string>    <string name="generate">生成</string>    <string name="pattern">組合</string>    <string name="copy">複製</string>    <string name="doublepw_hint">輸入Cipher的專屬密碼，定製屬於你的計算公式，生成你的獨立密碼</string>    <string name="confirm">確定</string>    <string name="slide_input">滑動屏幕，輸入手勢</string>    <string name="now_input">當前輸入：</string>    <string name="clear">清空</string>    <string name="link_input">滑動屏幕,連接圓點</string>    <string name="number">數字</string>    <string name="numberletter">數字+字母</string>    <string name="all">數字+字母+特殊符號</string>    <string name="scan_success">︱識別成功︱</string>    <string name="rescan">重新掃描</string>    <string name="texttopw">輸入文字，生成密碼:</string>    <string name="howworks">Cipher 是怎麽運作的？</string>    <string name="howworks_ans">■ 它能讓你用最輕的記憶負擔，記住複雜的密碼</string>    <string name="isitsecure">Cipher 安全嗎？</string>    <string name="sotscure_ans">■ 所有的密碼都衹存在用戶的腦海中，Cipher衹作爲一個生成密碼的媒介，不會有被駭入的風險</string></resources>