<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_height="match_parent"    android:layout_width="match_parent"    android:background="#ffffff"    android:orientation="vertical"    android:id="@+id/info_linear" >    <TextView        android:layout_height="wrap_content"        android:layout_width="fill_parent"        android:textColor="#FFFFFF"        android:gravity="center"        android:textSize="20sp"        android:background="#5D6565"        android:id="@+id/info_information"        android:padding="5dp"        android:text="@string/info" />    <ScrollView        android:layout_width="match_parent"        android:layout_height="match_parent">        <LinearLayout            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_weight="1"            android:id="@+id/info_linear_contect">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceLarge"                android:id="@+id/textView"                android:textColor="#111111"                android:layout_marginLeft="7dp"                android:layout_marginTop="7dp"                android:text="@string/howworks" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceMedium"                android:id="@+id/textView2"                android:textColor="#333333"                android:layout_marginLeft="7dp"                android:layout_marginTop="7dp"                android:text="@string/howworks_ans" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceLarge"                android:id="@+id/textView12"                android:textColor="#111111"                android:layout_marginLeft="7dp"                android:layout_marginTop="7dp"                android:text="@string/isitsecure" />            <TextView                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceMedium"                android:id="@+id/textView13"                android:textColor="#333333"                android:layout_marginLeft="7dp"                android:layout_marginTop="7dp"                android:text="@string/sotscure_ans" />        </LinearLayout>    </ScrollView></LinearLayout>