<?xml version="1.0" encoding="utf-8"?><LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_height="match_parent"    android:layout_width="match_parent"    android:background="#ffffff"    android:orientation="vertical"    android:id="@+id/setting_linear" >    <TextView        android:layout_height="wrap_content"        android:layout_width="fill_parent"        android:textColor="#FFFFFF"        android:gravity="center"        android:textSize="20sp"        android:background="#5D6565"        android:id="@+id/doublepassword_setting"        android:padding="5dp"        android:text="@string/cipher_setting" />    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_weight="1">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceLarge"            android:text="@string/cipher_doublepassword"            android:id="@+id/doublepassword_text"            android:textColor="#111111"            android:layout_marginLeft="7dp"            android:layout_marginTop="7dp" />        <EditText            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:id="@+id/doublepassword_editText"            android:layout_centerVertical="true"            android:layout_alignParentRight="true"            android:layout_alignParentEnd="true"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:textColor="#333333"            android:textColorHint="#4c4c4c"            android:textColorHighlight="#4c4c4c"            android:textColorLink="#4c4c4c"            android:background="@drawable/abc_cab_background_top_mtrl_alpha"            android:paddingTop="5dp"            android:paddingBottom="5dp"            android:textSize="17dp"            android:textAppearance="?android:attr/textAppearanceLarge"            android:layout_marginLeft="7dp"            android:layout_marginRight="7dp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceSmall"            android:id="@+id/doublepassword_hint"            android:textColor="#111111"            android:layout_marginTop="7dp"            android:layout_gravity="right"            android:layout_marginRight="7dp"            android:text="@string/doublepw_hint"            android:paddingLeft="5dp" />    </LinearLayout>    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:textAppearance="?android:attr/textAppearanceSmall"        android:textSize="17sp"        android:clickable="true"        android:id="@+id/doublepassword_confirm"        android:background="@drawable/btn_selector"        android:textColor="#F5F5F5"        android:textAlignment="center"        android:paddingLeft="10dp"        android:paddingRight="10dp"        android:paddingTop="10dp"        android:paddingBottom="10dp"        android:gravity="center"        android:layout_gravity="right"        android:layout_marginRight="7dp"        android:layout_marginBottom="7dp"        android:text="@string/confirm" /></LinearLayout>