<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:background="#FAFAFA"    android:clickable="true"    android:visibility="gone"    android:id="@+id/pattern_relative">    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentTop="true"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"        android:id="@+id/pattern_linear">        <TextView            android:layout_width="match_parent"            android:layout_height="match_parent"            android:textAppearance="?android:attr/textAppearanceLarge"            android:text="@string/number"            android:id="@+id/pattern_num"            android:textColor="#FFFFFF"            android:background="@drawable/btn_selector"            android:paddingLeft="12dp"            android:paddingTop="5dp"            android:paddingRight="12dp"            android:paddingBottom="5dp"            android:layout_alignParentTop="true"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:gravity="left|center"            android:clickable="true"            android:layout_marginTop="5dp"            android:layout_marginBottom="5dp" />        <TextView            android:layout_width="match_parent"            android:layout_height="match_parent"            android:textAppearance="?android:attr/textAppearanceLarge"            android:text="@string/numberletter"            android:id="@+id/pattern_numletter"            android:textColor="#FFFFFF"            android:background="@drawable/btn_selector"            android:paddingLeft="12dp"            android:paddingTop="5dp"            android:paddingRight="12dp"            android:paddingBottom="5dp"            android:layout_alignParentTop="true"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:gravity="left"            android:clickable="true"            android:layout_marginTop="5dp"            android:layout_marginBottom="5dp" />        <TextView            android:layout_width="match_parent"            android:layout_height="match_parent"            android:textAppearance="?android:attr/textAppearanceLarge"            android:text="@string/all"            android:id="@+id/pattern_all"            android:textColor="#FFFFFF"            android:background="@drawable/btn_selector"            android:paddingLeft="12dp"            android:paddingTop="5dp"            android:paddingRight="12dp"            android:paddingBottom="5dp"            android:layout_alignParentTop="true"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:gravity="left"            android:clickable="true"            android:layout_marginTop="5dp"            android:layout_marginBottom="5dp" />    </LinearLayout></RelativeLayout>