<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:visibility="visible"    android:background="#EEEEEE"    android:layout_marginBottom="10dp"    android:layout_marginTop="10dp"    android:id="@+id/getsture_relative">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceMedium"            android:text="@string/slide_input"            android:id="@+id/gesture_hint"            android:background="#111111"            android:paddingTop="3dp"            android:paddingBottom="3dp"            android:visibility="visible"            android:textColor="#FFFFFF"            android:layout_alignParentTop="true"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:layout_marginTop="10dp"            android:paddingLeft="5dp"            android:paddingRight="5dp" />        <ImageView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:id="@+id/gesture_image"            android:layout_centerVertical="true"            android:layout_centerHorizontal="true"            android:src="@mipmap/gesterate_arrow"            android:visibility="invisible" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceMedium"            android:text="@string/now_input"            android:id="@+id/gesture_input_hint"            android:background="#111111"            android:paddingTop="3dp"            android:paddingBottom="3dp"            android:visibility="visible"            android:textColor="#FFFFFF"            android:paddingLeft="5dp"            android:paddingRight="5dp"            android:layout_below="@+id/gesture_hint"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:layout_marginTop="10dp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceMedium"            android:text="@string/clear"            android:id="@+id/gesture_clear"            android:background="#111111"            android:paddingTop="5dp"            android:paddingBottom="5dp"            android:visibility="visible"            android:textColor="#FFFFFF"            android:paddingLeft="7dp"            android:paddingRight="7dp"            android:layout_below="@+id/gesture_input_hint"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:clickable="true"            android:layout_marginTop="7dp" />        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textAppearance="?android:attr/textAppearanceMedium"            android:id="@+id/gesture_input"            android:background="#111111"            android:paddingTop="3dp"            android:paddingBottom="3dp"            android:visibility="visible"            android:textColor="#FFFFFF"            android:paddingRight="5dp"            android:layout_alignTop="@+id/gesture_input_hint"            android:layout_toRightOf="@+id/gesture_input_hint"            android:layout_toEndOf="@+id/gesture_input_hint"            android:layout_alignBottom="@+id/gesture_input_hint"            android:gravity="center"            android:textAlignment="center" /></RelativeLayout>