<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:paddingTop="@dimen/activity_vertical_margin"    android:paddingLeft="@dimen/activity_vertical_margin"    android:paddingRight="@dimen/activity_vertical_margin"    android:paddingBottom="7dp"    tools:context="lamen.cipher.MainActivity"    android:background="#FAFAFA"    android:id="@+id/generate_relative">    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:textAppearance="?android:attr/textAppearanceLarge"        android:text="CIPHER"        android:id="@+id/generate_title_textview"        android:textColor="#333333"        android:visibility="visible"        android:textSize="27dp"        android:layout_alignParentTop="true"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true" />    <TextView        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:textAppearance="?android:attr/textAppearanceLarge"        android:text="TEXT"        android:id="@+id/generate_title_type_textview"        android:textColor="#333333"        android:visibility="visible"        android:textSize="17dp"        android:layout_alignBottom="@+id/generate_title_textview"        android:layout_toRightOf="@+id/generate_title_textview"        android:layout_toEndOf="@+id/generate_title_textview"        android:layout_alignParentTop="true"        android:layout_marginLeft="5dp" />    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_below="@+id/generate_title_textview"        android:layout_alignLeft="@+id/generate_title_textview"        android:layout_alignStart="@+id/generate_title_textview"        android:layout_above="@+id/generate_panel_linear"        android:visibility="visible"        android:id="@+id/generate_main_relative">    </RelativeLayout>    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_alignParentBottom="true"        android:layout_alignParentLeft="true"        android:layout_alignParentStart="true"        android:layout_alignParentRight="true"        android:layout_alignParentEnd="true"        android:id="@+id/generate_panel_linear">        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_marginBottom="10dp"            android:id="@+id/generate_pw_panel">            <TextView                android:layout_width="wrap_content"                android:layout_height="match_parent"                android:textAppearance="?android:attr/textAppearanceLarge"                android:id="@+id/pw_panel_pw_textview"                android:layout_weight="1"                android:textColor="#333333"                android:gravity="center_vertical"                android:textSize="27dp"                android:text="Password" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textSize="17sp"                android:text="@string/generate"                android:clickable="true"                android:id="@+id/pw_panel_generate_textview"                android:background="@drawable/btn_selector"                android:textColor="#F5F5F5"                android:textAlignment="center"                android:paddingLeft="10dp"                android:paddingRight="10dp"                android:paddingTop="10dp"                android:paddingBottom="10dp"                android:gravity="center" />        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:id="@+id/generate_fun_panel">            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textSize="17sp"                android:text="8digit"                android:clickable="true"                android:id="@+id/fun_panel_digit_textview"                android:background="@drawable/btn_selector"                android:textColor="#F5F5F5"                android:layout_weight="1"                android:textAlignment="center"                android:layout_marginRight="5dp"                android:gravity="center"                android:paddingLeft="5dp"                android:paddingRight="5dp"                android:paddingTop="7dp"                android:paddingBottom="7dp" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textSize="17sp"                android:text="@string/pattern"                android:clickable="true"                android:id="@+id/fun_panel_pattern_textview"                android:background="@drawable/btn_selector"                android:textColor="#F5F5F5"                android:layout_weight="1"                android:textAlignment="center"                android:layout_marginRight="5dp"                android:gravity="center"                android:paddingLeft="5dp"                android:paddingTop="7dp"                android:paddingRight="5dp"                android:paddingBottom="7dp" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textSize="17sp"                android:text="@string/info"                android:clickable="true"                android:id="@+id/fun_panel_info_textview"                android:background="@drawable/btn_selector"                android:textColor="#F5F5F5"                android:layout_weight="1"                android:textAlignment="center"                android:layout_marginRight="5dp"                android:gravity="center"                android:paddingLeft="5dp"                android:paddingTop="7dp"                android:paddingRight="5dp"                android:paddingBottom="7dp"                android:visibility="visible" />            <TextView                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:textAppearance="?android:attr/textAppearanceSmall"                android:textSize="17sp"                android:text="@string/copy"                android:clickable="true"                android:id="@+id/fun_panel_copy_textview"                android:background="@drawable/btn_selector"                android:textColor="#F5F5F5"                android:layout_weight="1"                android:textAlignment="center"                android:gravity="center"                android:paddingLeft="5dp"                android:paddingTop="7dp"                android:paddingRight="5dp"                android:paddingBottom="7dp" />        </LinearLayout>    </LinearLayout>    <RelativeLayout        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="42dp"        android:visibility="visible"        android:id="@+id/generate_fun_panel_set">        <include            layout="@layout/generate_panel_digit"            android:layout_height="wrap_content"            android:layout_width="wrap_content"            android:layout_alignParentTop="false"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:layout_alignParentBottom="true"            android:layout_alignParentRight="true"            android:layout_alignParentEnd="true" />        <include            layout="@layout/generate_panel_pattern"            android:layout_height="wrap_content"            android:layout_width="wrap_content"            android:layout_alignParentTop="false"            android:layout_alignParentLeft="true"            android:layout_alignParentStart="true"            android:layout_alignParentBottom="true"            android:layout_alignParentRight="true"            android:layout_alignParentEnd="true" />    </RelativeLayout></RelativeLayout>